deployments/ingress/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress # change to unique name
  namespace: demo-ingress # change to correct namespace - Ensure correct namespace before applying
  annotations:
    # This is the main config EKS ALB manifest
    # Do no delete this YAML or the ALB will be re-created with another name
    # Annotation Settings here will be applied globally so do not override the annotations on other Ingress Manifest files
    alb.ingress.kubernetes.io/load-balancer-name: demo-eks-alb # global name - do not change
    alb.ingress.kubernetes.io/group.name: eks-cluster-demo-ingress  # use same ALB for all ingress on same group.name
    alb.ingress.kubernetes.io/group.order: '1' # this should be unique, check other Ingress on other namespaces
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Owner=devops,Environment=demo,Project=demo,Automation=exempt,CostCenter=devops,Application=ALB
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/success-codes: "200,301,304"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,idle_timeout.timeout_seconds=300,deletion_protection.enabled=true
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-southeast-2:239134982846:certificate/faaed4b8-5681-4292-821b-52bb7c7ce5ad'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.redirect-to-google: >
      {"Type":"redirect","RedirectConfig":{"Host":"www.google.com","Path":"/","Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
spec:
  ingressClassName: alb
  rules:
    - host: dev.cloudmigs.com
      http:
        paths:
          - path: /search  # sample redirection rule for AWS ALB
            pathType: ImplementationSpecific
            backend:
              service:
                name: redirect-to-google
                port:
                  name: use-annotation
